--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ allprojects {
 
     ext {
         junitVersion = '5.0.1'
+
     }
 
     apply plugin: 'java'
@@ -23,7 +24,13 @@ allprojects {
     dependencies {
         compile 'org.jetbrains:annotations:15.0'
 
-        testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
         testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+
+//        testCompile "org.junit.jupiter:junit-platform-commons:$junitVersion"
+//        testCompile "org.junit.jupiter:junit-platform-engine:$junitVersion"
+        testCompile "org.junit.platform:junit-platform-runner:1.0.1"
+//        testCompile "org.junit.jupiter:junit-jupiter-api:1.0.1"
+        testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+//        testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     }
 }
